  * In distutils-install-layout.diff:
    - Restore _distutils_system_mod, this is how we configure setuptools'
      internal distutils behaviour. Thanks Eli Schwartz for noticing it was
      missing.
    - Remove support for patching the stdlib distutils, no longer needed.

  [ Matthias Klose ]
  * Package _sha2 instead of _sha256 and _sha512.
  * Don't ship gdbinit anymore, removed upstream.

 -- Matthias Klose <doko@debian.org>  Tue, 11 Apr 2023 10:54:41 +0200

python3.12 (3.12.0~a5-1) experimental; urgency=medium

  * Python 3.12.0 alpha 5 snapshot.

  [ Matthias Klose ]
  * Fix error message for 'python3 -m venv dir`, when python3-venv
    is not installed. Closes: #1026268.

  [ Stefano Rivera ]
  * Mention that deleting EXTERNALLY-MANAGED is an option, in README.venv.
  * Update watch file for Python 3.12.
  * Override expat embedded-library lintian false-positives. (See: #1031859)
  * Update lintian overrides for reorganization in lintian 2.100.0.
  * Override depends-on-python-minimal in python3.12-nopie.
  * Override python3-script-but-no-python3-dep in python3.12.

 -- Matthias Klose <doko@debian.org>  Thu, 02 Mar 2023 19:00:33 +0100

python3.11 (3.11.2-4) unstable; urgency=medium

  [ Stefano Rivera ]
  * Revert the CCSHARED patch to test_customize_compiler, this was WIP and
    didn't work.

  [Matthias Klose]
  * Remove build dependency on libb2-dev, oldish library.
  * Build with internal mpdecimal library, so that mpdecimal can be removed
    for bookworm.

 -- Matthias Klose <doko@debian.org>  Sun, 12 Feb 2023 01:48:52 +0100

python3.11 (3.11.2-3) unstable; urgency=medium

  [ Stefano Rivera ]
  * Refresh patches.
  * Revert pip importlib.metadata workaround, fixed in pip 22.2.
  * Declare python3.11 to be PEP 668 EXTERNALLY-MANAGED.
  * Update and install README.venv, explaining this.
  * Recommend ca-certificates from python3.11. Closes: #960869.
  * Configure --with-ssl-default-suites=openssl. Closes: #1026802.
  * Update watch file.