@@ -1,12 +1,16 @@
 libpython@VER@d.so.1.0 libpython@VER@-dbg #MINVER#
 #include "libpython.symbols"
+ _PyInterpreterState_GetRefTotal@Base @SVER@
  _PyObject_DebugMallocStats@Base @SVER@
  _PySet_Dummy@Base @SVER@
  _PyUnicode_CheckConsistency@Base @SVER@
  _PyWideStringList_CheckConsistency@Base @SVER@
  _Py_Dealloc@Base @SVER@
- _Py_GetRefTotal@Base @SVER@
+ _Py_DecRefTotal_DO_NOT_USE_THIS@Base @SVER@
+ _Py_GetGlobalRefTotal@Base @SVER@
+ _Py_GetLegacyRefTotal@Base @SVER@
  _Py_HashSecret_Initialized@Base @SVER@
+ _Py_IncRefTotal_DO_NOT_USE_THIS@Base @SVER@
  _Py_NegativeRefcount@Base @SVER@
  _Py_RefTotal@Base @SVER@
  PyModule_Create2@Base @SVER@
